--- a/src/components/SearchPage/index.scss
+++ b/src/components/SearchPage/index.scss
@@ -1,28 +1,43 @@
-.search-page {
-  height: 100vh;
-}
+@import "../../styling/responsive";
 
-.search-page h1 {
-  margin-bottom: 3.5rem;
-}
+.search {
+  height: 100%;
+  h1 {
+    margin-bottom: 3.5rem;
+  }
 
-.search-elements {
-  float: right;
-  margin: 0 6rem;
-  margin-top: 22%;
-}
+  @include bp(small) {
+    h1 {
+      font-size: 2rem;
+    }
+  }
 
-.search-form {
-  height: 48px;
-  display: flex;
-  justify-content: stretch;
-  box-shadow: 0 6px 20px 0px rgba(222, 143, 143, 0.25);
-  border-radius: 0;
-  transition: box-shadow 200ms ease-in-out;
-  position: relative;
-}
-.search-form:focus-within {
-  box-shadow: 0 8px 25px 5px rgba(222, 143, 143, 0.25);
+  &-elements {
+    float: right;
+    margin: 22% 6rem 0 6rem;
+
+    @include bp(small) {
+      margin: 50% 1rem 0 1rem;
+    }
+  }
+
+  &-form {
+    height: 48px;
+    display: flex;
+    justify-content: stretch;
+    box-shadow: 0 6px 20px 0px rgba(222, 143, 143, 0.25);
+    border-radius: 0;
+    transition: box-shadow 200ms ease-in-out;
+    position: relative;
+
+    &:focus-within {
+      box-shadow: 0 8px 25px 5px rgba(222, 143, 143, 0.25);
+    }
+  }
+
+  .highlight {
+    border-bottom: 6px solid #ff4f2d;
+  }
 }
 
 input[type="text"] {
@@ -35,7 +50,6 @@ input[type="text"] {
 }
 
 input:focus {
-  outline-color: transparent;
   outline: none;
 }
 
@@ -55,24 +69,7 @@ input[type="submit"] {
   -moz-appearance: none;
   border-radius: 0;
   height: 48px;
-}
-
-.highlight {
-  border-bottom: 6px solid #ff4f2d;
-}
-
-@media only screen and (max-width: 425px) {
-  .search-elements {
-    margin-left: 1rem;
-    margin-right: 1rem;
-    margin-top: 50%;
-  }
-
-  .search-elements h1 {
-    font-size: 2rem;
-  }
-
-  input[type="submit"] {
+  @include bp(small) {
     padding-left: 1rem;
     padding-right: 1rem;
   }
